--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,7 +63,8 @@
   <ItemGroup>
     <Compile Include="Assets\_Scripts\Physics.cs" />
     <Compile Include="Assets\_Scripts\PhysicsObject.cs" />
-    <Compile Include="Assets\_Scripts\PlayerController.cs" />
+    <Compile Include="Assets\_Scripts\Utilities\Constants.cs" />
+    <Compile Include="Assets\_Scripts\Utilities\MyUtility.cs" />
     <Compile Include="Assets\3rd Party Assets\Tilemap\Brushes\Tint Brush Smooth\Scripts\TintTextureGenerator.cs" />
     <Compile Include="Assets\3rd Party Assets\Tilemap\GridInformation\Scripts\GridInformation.cs" />
     <Compile Include="Assets\3rd Party Assets\Tilemap\Tiles\Animated Tile\Scripts\AnimatedTile.cs" />
