--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,12 +61,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\_Scripts\CameraFollow.cs" />
-    <Compile Include="Assets\_Scripts\ControllerManager.cs" />
-    <Compile Include="Assets\_Scripts\GlobalInstaller.cs" />
-    <Compile Include="Assets\_Scripts\Physics.cs" />
-    <Compile Include="Assets\_Scripts\PhysicsObject.cs" />
-    <Compile Include="Assets\_Scripts\PlayerController.cs" />
+    <Compile Include="Assets\_Scripts\Character\PhysicsObject.cs" />
+    <Compile Include="Assets\_Scripts\Character\PlayerController.cs" />
+    <Compile Include="Assets\_Scripts\GameControl\CameraFollow.cs" />
+    <Compile Include="Assets\_Scripts\GameControl\ControllerManager.cs" />
+    <Compile Include="Assets\_Scripts\GameControl\GlobalInstaller.cs" />
+    <Compile Include="Assets\_Scripts\Interactable\Brick.cs" />
+    <Compile Include="Assets\_Scripts\Interactable\IInteractableObject.cs" />
     <Compile Include="Assets\_Scripts\Utilities\Constants.cs" />
     <Compile Include="Assets\_Scripts\Utilities\MyUtility.cs" />
     <Compile Include="Assets\3rd Party Assets\Tilemap\Brushes\Tint Brush Smooth\Scripts\TintTextureGenerator.cs" />
