--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Assets\_Scripts\Interactable\Enemy\EnemyBase.cs" />
     <Compile Include="Assets\_Scripts\Interactable\Enemy\Mushbro.cs" />
     <Compile Include="Assets\_Scripts\Interactable\IInteractableObject.cs" />
+    <Compile Include="Assets\_Scripts\Interactable\Item\Flag.cs" />
     <Compile Include="Assets\_Scripts\Interactable\Item\PowerupMushroom.cs" />
     <Compile Include="Assets\_Scripts\Particle\SelfDestroyTimer.cs" />
     <Compile Include="Assets\_Scripts\Utilities\Constants.cs" />
